<resources>
    <string name="app_name">Winnum App</string>
    <string name="logo">Войдите в Winnum</string>
    <string name="hint_user_field">Пароль</string>
    <string name="main_btn">Войти</string>
    <string name="no_user_input">Неправильный пароль</string>
    <string name="results">Результаты</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ip_port">192.168.0.1:80</string>
    <string name="tags">NC_ON NC_EMERGENCY_STOP NC_OFF
    </string>
    <string name="tag">NC_EMERGENCY_STOP</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ip_winnum">Введите ip и порт сервера Winnum</string>
    <string name="enter_tags">Введите теги, составляющие время простоя через пробел</string>
    <string name="Next">Далее</string>
    <string name="login">Логин</string>
    <string name="Save">Сохранить</string>
</resources>