<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColor"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/logo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ip_winnum"
        android:layout_marginTop="60sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/user_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo2"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/ip_port"
        android:inputType="textPersonName"
        android:textColorHint="@color/textColorHint" />

    <TextView
        android:id="@+id/logo3"
        android:layout_width="match_parent"
        android:layout_below="@+id/user_field2"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/enter_tags"
        android:layout_marginTop="20sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/user_field3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo3"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/tags"
        android:inputType="textPersonName"
        android:textColorHint="@color/textColorHint" />

    <Button
        android:id="@+id/main_btn2"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@+id/user_field3"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="100sp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>