<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textColorHint="@color/textColorHint" />

    <EditText
        android:id="@+id/user_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_field"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/hint_user_field"
        android:inputType="textPersonName"
        android:textColorHint="@color/textColorHint" />

    <Button
        android:id="@+id/main_btn"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@+id/user_field2"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="100sp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bottomRightButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:drawableTop="@drawable/stng"
        android:backgroundTint="@color/colorAccent"
        />/>


</RelativeLayout>